--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <div class="maindiv"></div>
+    <div class="maindiv" style="display:none"></div>
+    <iframe
+      style="width:100vw;height:100vh;"
+      src="https://jakedeichert.github.io/wasm-astar/"
+    ></iframe>
     <script src="./scripts.js"></script>
   </body>
 </html>
